allow container entrypoint override with sleep to avoid the sandbox tearing down upon startup do to a command/entrypoint finishing immediately in the used OCI image (e.g. ubuntu:22.04 stops execution immediately)
