# api/openapi/api-gateway.yaml
@@ -3,6 +3,13 @@ components:
     ContainerInfo:
       additionalProperties: false
       properties:
+        command:
+          description: Container entrypoint override
+          items:
+            type: string
+          type:
+            - array
+            - "null"
         image:
           description: Container image
           type: string
@@ -15,6 +22,13 @@ components:
     ContainerSpec:
       additionalProperties: false
       properties:
+        command:
+          description: Override the container entrypoint. Defaults to sleep infinity if omitted.
+          items:
+            type: string
+          type:
+            - array
+            - "null"
         env:
           additionalProperties:
             type: string
